2009-03-19  Gordon Williams <gordon.williams@collabora.co.uk>

        * src/home/hd-clutter-cache.c
        * src/home/hd-clutter-cache.h: Added support for reloading textures in
        the cache
        * src/mb/hd-theme.c: Whenever a new theme is created, notify the 
        texture so it can reload all its' textures on theme change. This
        updates titlebars etc, which PARTIALLY solves NB#101874

2009-03-19  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#105921 Task switcher is not accessible after the missed call event
	          when call UI is opened

	* src/mb/hd-note.c:
	  Stack incoming event windows below the desktop,
	  so hd_comp_mgr_get_foreground_region() won't find it
	  and won't think it covers anything.

2009-03-19  Jan Arne Petersen  <jpetersen@openismus.com>

	Add support for _HILDON_APPLET_ON_CURRENT_DESKTOP property.

	* src/home/hd-home.c (hd_home_get_current_view,
	  hd_home_get_not_visible_views):
	* src/home/hd-home.h: Add function to get all not visible views.

	* src/mb/hd-atoms.c (hd_atoms_init):
	* src/mb/hd-atoms.h (HD_ATOM_HILDON_APPLET_ON_CURRENT_DESKTOP): Add
	new atom.

	* src/mb/hd-desktop.c (hd_desktop_stack): Add/Remove
	_HILDON_APPLET_ON_CURRENT_DESKTOP property to applets.

2009-03-18  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#104475

	* src/home/hd-home.c (hd_home_desktop_key_press):
	* src/home/hd-render-manager.h (STATE_NO_CALL_FROM_HOME): Do not allow
	call from Home for layout mode, switcher and launcher.

	* src/mb/Makefile.am: Remove trailing spaces.

2009-03-18  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Removed the icon theme hack, using a bit cleaner workaround.

	* configure.ac,
	  data/icons: Removed data/icons.
	* data/Makefile.am,
	  data/qgn_home_close.png: Moved PNG here from the icons directory.
	* src/home/hd-task-navigator.c (hd_task_navigator_init): Load
	qgn_home_close.png from /usr/share/hildon-desktop for now.

2009-03-18  Gordon Williams <gordon.williams@collabora.co.uk>
