@@ -109,7 +109,8 @@ PKG_CHECK_MODULES(HD, [clutter-0.8 dnl
 		       libcanberra dnl
 		       gnome-vfs-2.0 dnl
 		       gdk-pixbuf-xlib-2.0 dnl
-		       xft])
+		       xft dnl
+                       mce])
 
 HD_INCS='-I$(top_srcdir)/src -I$(top_srcdir)/src/home -I$(top_srcdir)/src/mb -I$(top_srcdir)/src/util -I$(top_srcdir)/src/a11y'
 
