@@ -52,6 +52,9 @@
 
 #include "../tidy/tidy-blur-group.h"
 
+#include <dbus/dbus-glib-bindings.h>
+#include <mce/dbus-names.h>
+
 #include <sys/types.h>
 #include <signal.h>
 #include <math.h>
@@ -98,6 +101,9 @@ struct HdCompMgrPrivate
 
   /* Track changes to the PORTRAIT properties. */
   unsigned long          property_changed_cb_id;
+
+  /* MCE D-Bus Proxy */
+  DBusGProxy            *mce_proxy;
 };
 
 /*
@@ -470,6 +476,8 @@ hd_comp_mgr_init (MBWMObject *obj, va_list vap)
   HdTaskNavigator      *task_nav;
   ClutterActor         *stage;
   ClutterActor         *arena;
+  DBusGConnection      *system_connection;
+  GError               *error = NULL;
 
   priv = hmgr->priv = g_new0 (HdCompMgrPrivate, 1);
 
@@ -542,6 +550,24 @@ hd_comp_mgr_init (MBWMObject *obj, va_list vap)
 
   hd_render_manager_set_state(HDRM_STATE_HOME);
 
+
+  /* Get D-Bus proxy for mce calls */
+  system_connection = dbus_g_bus_get (DBUS_BUS_SYSTEM, &error);
+
+  if (error)
+    {
+      g_warning ("Could not connect to System D-Bus. %s", error->message);
+      g_error_free (error);
+    }
+  else
+    {
+      priv->mce_proxy = dbus_g_proxy_new_for_name (system_connection,
+                                                   MCE_SERVICE,
+                                                   MCE_REQUEST_PATH,
+                                                   MCE_REQUEST_IF);
+      g_debug ("%s. Got mce Proxy", __FUNCTION__);
+    }
+
   return 1;
 }
 
@@ -558,6 +584,12 @@ hd_comp_mgr_destroy (MBWMObject *obj)
                                      MB_WM_COMP_MGR (obj)->wm->main_ctx,
                                      PropertyNotify,
                                      priv->property_changed_cb_id);
+
+  if (priv->mce_proxy)
+    {
+      g_object_unref (priv->mce_proxy);
+      priv->mce_proxy = NULL;
+    }
 }
 
 static HdCompMgrClient *
@@ -1543,6 +1575,15 @@ hd_comp_mgr_map_notify (MBWMCompMgr *mgr, MBWindowManagerClient *c)
           /* Notes need to be pulled out right infront of the blur group
            * manually, as they are not given focus */
           hd_render_manager_add_to_front_group(actor);
+        }
+      /* Send dbus request to mce to turn display backlight on for banner notes */
+      if (priv->mce_proxy && HD_IS_BANNER_NOTE (c))
+        {
+          g_debug ("%s. Call %s",
+                   __FUNCTION__,
+                   MCE_DISPLAY_ON_REQ);
+          dbus_g_proxy_call_no_reply (priv->mce_proxy, MCE_DISPLAY_ON_REQ,
+                                      G_TYPE_INVALID, G_TYPE_INVALID);
         }
       return;
     }
